--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.5",
     "@rainbow-me/rainbowkit": "^2.1.5",
     "@tanstack/react-query": "^5.55.0",
+    "ipfs-http-client": "^60.0.1",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "viem": "2.x",
     "wagmi": "^2.12.8"
   },
